objects/vlocity_ins__FlowStepFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>vlocity_ins__ApplicationType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FieldName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FieldType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FlowStep__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flow Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InOut__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In/Out</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSONFieldName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JSON Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSONObjectName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JSON Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application Flow Setting</label>
</CustomObject>